tests/tooling/fixtures/native/execution/negative/switch_return_missing_default.objc3
module SwitchReturnMissingDefault;

fn main() -> i32 {
  let value = 2;
  switch (value) {
    case 1:
      return 11;
    case 2:
      return 42;
  }
}